# rubricodex

./: .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml
.agents/plugins/: marketplace.json
.github/: PULL_REQUEST_TEMPLATE.md  RELEASE_TEMPLATE.md  SECURITY.md  release.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  question.yml
.github/workflows/: ci.yml
docs/: cli-install.md  cli-reference.md  rubricodex-ssot.md
examples/source-code-endpoint/: README.md  package.json
examples/source-code-endpoint/.rubricodex/: config.json  harness-plan.json  matrix.json  target.json
examples/source-code-endpoint/.rubricodex/intent/: brief.json
examples/source-code-endpoint/.rubricodex/matrix/: evaluation-matrix.json
examples/source-code-endpoint/.rubricodex/runs/example-v0.1/: app-collection.json  app-session-import.json  (+6 more)
examples/source-code-endpoint/src/: server.js
examples/source-code-endpoint/test/: server.test.js
plugins/rubricodex/: HOOKS.md
plugins/rubricodex/.codex-plugin/: plugin.json
plugins/rubricodex/hooks/: hooks.json
plugins/rubricodex/skills/rubricodex/: SKILL.md
rubricodex/: __init__.py  artifacts.py  cli.py  hooks.py  schemas.py  subagents.py
rubricodex/schemas/v0.1/: app-cards.schema.json  app-collection.schema.json  app-session.schema.json  evaluation-matrix.schema.json  evidence.schema.json  goal-lock.schema.json  intent-brief.schema.json  orchestrator.schema.json  probe-plan.schema.json  probe-result.schema.json  run-manifest.schema.json  scorecard.schema.json
tests/: test_rubricodex.py
(+14 files in other folders)
