[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "rubricodex"
version = "1.0.3"
description = "Codex output-quality harness for bounded goals, evidence, scorecards, and retune instructions."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Rubricodex" }]
keywords = ["codex", "quality", "evaluation", "harness"]

[project.scripts]
rubricodex = "rubricodex.cli:main"

[tool.setuptools]
packages = ["rubricodex"]

[tool.setuptools.package-data]
rubricodex = ["schemas/v0.1/*.schema.json"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
